@@ -11,6 +11,7 @@ use FOF30\Container\Container;
 use FOF30\Model\DataModel;
 use FOF30\Model\DataModel\Collection;
 use FOF30\View\View;
+use Joomla\CMS\HTML\HTMLHelper;
 use Joomla\Registry\Registry;
 
 defined('_JEXEC') or die;
@@ -42,7 +43,7 @@ class Raw extends View implements DataViewInterface
 	protected $permissions = null;
 
 	/** @var array Additional permissions to fetch on object creation, see getPermissions() */
-	protected $additionalPermissions = array();
+	protected $additionalPermissions = [];
 
 	/**
 	 * Overrides the constructor to apply Joomla! ACL permissions
@@ -50,7 +51,7 @@ class Raw extends View implements DataViewInterface
 	 * @param   Container  $container  The container we belong to
 	 * @param   array      $config     The configuration overrides for the view
 	 */
-	public function __construct(Container $container, array $config = array())
+	public function __construct(Container $container, array $config = [])
 	{
 		parent::__construct($container, $config);
 
@@ -58,78 +59,11 @@ class Raw extends View implements DataViewInterface
 	}
 
 	/**
-	 * Returns a permissions object.
-	 *
-	 * The additionalPermissions array is a hashed array of local key => Joomla! ACL key value pairs. Local key is the
-	 * name of the permission in the permissions object, whereas Joomla! ACL key is the name of the ACL permission
-	 * known to Joomla! e.g. "core.manage", "foobar.something" and so on.
-	 *
-	 * Note: on CLI applications all permissions are set to TRUE. There is no ACL check there.
-	 *
-	 * @param   null|string  $component              The name of the component. Leave empty for automatic detection.
-	 * @param   array        $additionalPermissions  Any additional permissions you want to add to the object.
-	 *
-	 * @return  object
-	 */
-	protected function getPermissions($component = null, array $additionalPermissions = array())
-	{
-		// Make sure we have a component
-		if (empty($component))
-		{
-			$component = $this->container->componentName;
-		}
-
-		// Initialise with all true
-		$permissions = array(
-			'create'	 => true,
-			'edit'		 => true,
-			'editown'	 => true,
-			'editstate'	 => true,
-			'delete'	 => true,
-		);
-
-		if (!empty($additionalPermissions))
-		{
-			foreach ($additionalPermissions as $localKey => $joomlaPermission)
-			{
-				$permissions[$localKey] = true;
-			}
-		}
-
-		$platform = $this->container->platform;
-
-		// If this is a CLI application we don't make any ACL checks
-		if ($platform->isCli())
-		{
-			return (object) $permissions;
-		}
-
-		// Get the core permissions
-		$permissions = array(
-			'create'	 => $platform->authorise('core.create'    , $component),
-			'edit'		 => $platform->authorise('core.edit'      , $component),
-			'editown'	 => $platform->authorise('core.edit.own'  , $component),
-			'editstate'	 => $platform->authorise('core.edit.state', $component),
-			'delete'	 => $platform->authorise('core.delete'    , $component),
-		);
-
-		if (!empty($additionalPermissions))
-		{
-			foreach ($additionalPermissions as $localKey => $joomlaPermission)
-			{
-				$permissions[$localKey] = $platform->authorise($joomlaPermission, $component);
-			}
-		}
-
-		return (object)$permissions;
-	}
-
-	/**
 	 * Determines if the current Joomla! version and your current table support AJAX-powered drag and drop reordering.
 	 * If they do, it will set up the drag & drop reordering feature.
 	 *
 	 * @return  boolean|array  False if not supported, otherwise a table with necessary information (saveOrder: should
-	 * 						   you enable DnD reordering; orderingColumn: which column has the ordering information).
+	 *                           you enable DnD reordering; orderingColumn: which column has the ordering information).
 	 */
 	public function hasAjaxOrderingSupport()
 	{
@@ -141,20 +75,24 @@ class Raw extends View implements DataViewInterface
 			return false;
 		}
 
-		$listOrder = $this->escape($model->getState('filter_order', null, 'cmd'));
-		$listDirn = $this->escape($model->getState('filter_order_Dir', null, 'cmd'));
-		$saveOrder = $listOrder == $model->getFieldAlias('ordering');
+		$listOrder       = $this->escape($model->getState('filter_order', null, 'cmd'));
+		$listDirn        = $this->escape($model->getState('filter_order_Dir', null, 'cmd'));
+		$saveOrder       = $listOrder == $model->getFieldAlias('ordering');
+		$saveOrderingUrl = '';
 
 		if ($saveOrder)
 		{
 			$saveOrderingUrl = 'index.php?option=' . $this->container->componentName . '&view=' . $this->getName() . '&task=saveorder&format=json';
-			\JHtml::_('sortablelist.sortable', 'itemsList', 'adminForm', strtolower($listDirn), $saveOrderingUrl);
+			$helper          = version_compare(JVERSION, '3.999.999', 'le') ? 'sortablelist.sortable' : 'draggablelist.draggable';
+
+			HtmlHelper::_($helper, 'itemsList', 'adminForm', strtolower($listDirn), $saveOrderingUrl);
 		}
 
-		return array(
-			'saveOrder'		 => $saveOrder,
-			'orderingColumn' => $model->getFieldAlias('ordering')
-		);
+		return [
+			'saveOrder'      => $saveOrder,
+			'saveOrderURL'   => $saveOrderingUrl . '&' . $this->container->platform->getToken() . '=1',
+			'orderingColumn' => $model->getFieldAlias('ordering'),
+		];
 	}
 
 	/**
@@ -228,6 +166,73 @@ class Raw extends View implements DataViewInterface
 	}
 
 	/**
+	 * Returns a permissions object.
+	 *
+	 * The additionalPermissions array is a hashed array of local key => Joomla! ACL key value pairs. Local key is the
+	 * name of the permission in the permissions object, whereas Joomla! ACL key is the name of the ACL permission
+	 * known to Joomla! e.g. "core.manage", "foobar.something" and so on.
+	 *
+	 * Note: on CLI applications all permissions are set to TRUE. There is no ACL check there.
+	 *
+	 * @param   null|string  $component              The name of the component. Leave empty for automatic detection.
+	 * @param   array        $additionalPermissions  Any additional permissions you want to add to the object.
+	 *
+	 * @return  object
+	 */
+	protected function getPermissions($component = null, array $additionalPermissions = [])
+	{
+		// Make sure we have a component
+		if (empty($component))
+		{
+			$component = $this->container->componentName;
+		}
+
+		// Initialise with all true
+		$permissions = [
+			'create'    => true,
+			'edit'      => true,
+			'editown'   => true,
+			'editstate' => true,
+			'delete'    => true,
+		];
+
+		if (!empty($additionalPermissions))
+		{
+			foreach ($additionalPermissions as $localKey => $joomlaPermission)
+			{
+				$permissions[$localKey] = true;
+			}
+		}
+
+		$platform = $this->container->platform;
+
+		// If this is a CLI application we don't make any ACL checks
+		if ($platform->isCli())
+		{
+			return (object) $permissions;
+		}
+
+		// Get the core permissions
+		$permissions = [
+			'create'    => $platform->authorise('core.create', $component),
+			'edit'      => $platform->authorise('core.edit', $component),
+			'editown'   => $platform->authorise('core.edit.own', $component),
+			'editstate' => $platform->authorise('core.edit.state', $component),
+			'delete'    => $platform->authorise('core.delete', $component),
+		];
+
+		if (!empty($additionalPermissions))
+		{
+			foreach ($additionalPermissions as $localKey => $joomlaPermission)
+			{
+				$permissions[$localKey] = $platform->authorise($joomlaPermission, $component);
+			}
+		}
+
+		return (object) $permissions;
+	}
+
+	/**
 	 * Executes before rendering the page for the Browse task.
 	 */
 	protected function onBeforeBrowse()
@@ -260,17 +265,17 @@ class Raw extends View implements DataViewInterface
 		}
 
 		$this->lists->limitStart = $model->getState('limitstart', 0, 'int');
-		$this->lists->limit = $model->getState('limit', $defaultLimit, 'int');
+		$this->lists->limit      = $model->getState('limit', $defaultLimit, 'int');
 
 		$model->limitstart = $this->lists->limitStart;
-		$model->limit = $this->lists->limit;
+		$model->limit      = $this->lists->limit;
 
 		// Assign items to the view
-		$this->items = $model->get(false);
+		$this->items     = $model->get(false);
 		$this->itemCount = $model->count();
 
 		// Ordering information
-		$this->lists->order = $model->getState('filter_order', $model->getIdFieldName(), 'cmd');
+		$this->lists->order     = $model->getState('filter_order', $model->getIdFieldName(), 'cmd');
 		$this->lists->order_Dir = $model->getState('filter_order_Dir', null, 'cmd');
 
 		if ($this->lists->order_Dir)
@@ -285,8 +290,8 @@ class Raw extends View implements DataViewInterface
 		if ($this->container->platform->isFrontend())
 		{
 			/** @var \JApplicationSite $app */
-			$app = \JFactory::getApplication();
-			$params = $app->getParams();
+			$app              = \JFactory::getApplication();
+			$params           = $app->getParams();
 			$this->pageParams = $params;
 		}
 	}
